src/examples/errors/trap.bash
#!/bin/bash -u

# This is an example of how to handle bash errors using the 'trap' builtin.
#
# References:
# - https://stackoverflow.com/questions/64786/error-handling-in-bash
# - https://rimuhosting.com/knowledgebase/linux/misc/trapping-ctrl-c-in-bash#:~:text=You%20can%20use%20the%20trap,to%20perform%20some%20cleanup%20functions.
 
# TBD
